[project]
name = "sparsity_alignment"
version = "0.1.0"
description = "Understanding the nature of redundancy in DNNs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv.sources]
my_utils = {path = "./my_utils", editable = true}
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

